# glitchtip-operator

./: Cargo.toml  Dockerfile  README.md  mise.toml
.github/workflows/: ci.yaml  e2e.yaml
charts/glitchtip-operator/: Chart.yaml  values.yaml
charts/glitchtip-operator/crds/: glitchtip.ruck.io.yaml
charts/glitchtip-operator/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  serviceaccount.yaml
examples/: instance.yaml  organization.yaml  project.yaml
hack/: e2e.sh  kind-up.sh
src/: context.rs  error.rs  gateway.rs  lib.rs  main.rs  pgop.rs
src/controllers/: mod.rs  organization.rs  project.rs  team.rs
src/controllers/instance/: bootstrap.rs  database.rs  migrate.rs  mod.rs  resources.rs
src/crds/: common.rs  instance.rs  mod.rs  organization.rs  project.rs  team.rs
src/glitchtip/: client.rs  mod.rs  models.rs
src/util/: apply.rs  dsn.rs  mod.rs  secrets.rs
tests/: client_tests.rs
